--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
         Invoke-WebRequest https://github.com/xuweilun/ACWIN/raw/main/frpc.bat -OutFile frpc.bat
         Invoke-WebRequest https://github.com/xuweilun/ACWIN/raw/main/check.bat -OutFile check.bat
         Invoke-WebRequest https://github.com/xuweilun/ACWIN/raw/main/loop.bat -OutFile loop.bat
-    - name: creat user.
+    - name: Creat User.
       run: cmd /c check.bat
     - name: Connect to your RDP 2core-7GB Ram.
       run: cmd /c frpc.bat
