--- a/frpc.ini
+++ b/frpc.ini
@@ -1,10 +1,10 @@
 [common]
-server_addr = frp2.freefrp.net
+server_addr = hk.freefrp.club
 server_port = 7000
-token = freefrp.net
+token = www.idonglei.com
 
 [github]
 type = tcp
 local_ip = 127.0.0.1
 local_port = 3389
-remote_port = 13889
+remote_port = 12389
