--- a/frpc.ini
+++ b/frpc.ini
@@ -1,7 +1,7 @@
 [common]
-server_addr = us.freefrp.club
+server_addr = frp2.freefrp.net
 server_port = 7000
-token = www.idonglei.com
+token = freefrp.net
 
 [github]
 type = tcp
