--- a/frpc.ini
+++ b/frpc.ini
@@ -1,5 +1,5 @@
 [common]
-server_addr = frp.freefrp.net
+server_addr = frp1.freefrp.net
 server_port = 7000
 token = freefrp.net
 
@@ -7,4 +7,4 @@ token = freefrp.net
 type = tcp
 local_ip = 127.0.0.1
 local_port = 3389
-remote_port = 22389
+remote_port = 12389
