--- a/frpc.ini
+++ b/frpc.ini
@@ -1,7 +1,7 @@
 [common]
-server_addr = frp.cnwanxy.tk
+server_addr = hk2.freefrp.club
 server_port = 7000
-token = freefrp.net
+token = www.idonglei.com
 
 [github]
 type = tcp
