--- a/frpc.ini
+++ b/frpc.ini
@@ -1,7 +1,7 @@
 [common]
-server_addr = frp2.freefrp.net
+server_addr = 52.139.178.56
 server_port = 7000
-token = freefrp.net
+token = jiayingxueyuan
 
 [github]
 type = tcp
